--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,9 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import url('./gallery.css');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
